# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.6"
description = "Some hooks for pre-commit."
authors = ["Payadel <payadelteam@gmail.com>"]
license = "GPLV3"
readme = "README.md"
repository = "https://github.com/Payadel/pre-commit-hooks"
packages = [{ include = "pre_commit_hooks" }]

[tool.poetry.dependencies]
python = "^3.8"
on-rails = "4.1.0"
pylity = ">=0.0.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.0"
pytest = "^7.2.2"
pylint = "^2.17.0"
isort = "^5.12.0"
coverage = "^7.2.2"
tox = "^4.4.7"

[tool.poetry.scripts]
run-scripts = "pre_commit_hooks.run_scripts.main:main"
document-oriented = "pre_commit_hooks.document_oriented.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
